bin/testsuite/tests/compiler/src/errors/compiler3283.swg
#global testerror "Err0194"

#[Swag.Global]
func mkVar(name: string, value: s32) {}
